fixed background scroll, scrollbar style changes

--- a/frontend/app/(root)/page.module.scss
+++ b/frontend/app/(root)/page.module.scss
@@ -5,8 +5,8 @@
 .mainPage {
     width: 100%;
     position: relative;
-    scrollbar-width: thin;
-     scrollbar-color: var( --scrollbar) var( --scrollbar);
+    // scrollbar-width: thin;
+    //  scrollbar-color: var( --scrollbar) var( --scrollbar);
 
   }
 
