--- a/frontend/app/globals.scss
+++ b/frontend/app/globals.scss
@@ -12,11 +12,13 @@ body,
     display: flex;
     flex-direction: column;
     box-sizing: border-box;
-    scrollbar-width: none;
+    scrollbar-width: thin;
     transition: background-color 0.2s ease, color 0.2s ease;
 }
 
-// Your custom Notyf styles
+
+// Custom Notyf styles:
+
 .notyf {
     padding-top: 20px !important;
 }
@@ -40,3 +42,24 @@ body,
     color: #ffffff !important;
     font-size: 1.3rem;
 }
+
+
+
+//Scrollbar styles:
+
+/* Global scrollbar styles */
+::-webkit-scrollbar {
+    width: 4px; 
+}
+  
+  /* Track (background of the scrollbar) */
+  ::-webkit-scrollbar-track {
+    background: none; 
+    border-radius: 4px; 
+  }
+  
+  /* Handle (movable part of the scrollbar) */
+  ::-webkit-scrollbar-thumb {
+    background: var(--scrollbar);
+    border-radius: 10px;
+  }  
