--- a/frontend/components/Drawer/Drawer.module.scss
+++ b/frontend/components/Drawer/Drawer.module.scss
@@ -16,8 +16,8 @@
     border-radius: 30px 30px 0 0;
     overflow-y: auto;
     box-sizing: border-box;
-    scrollbar-width: thin;
-    scrollbar-color: var( --scrollbar) var( --scrollbar);
+    // scrollbar-width: thin;
+    // scrollbar-color: var( --scrollbar) var( --scrollbar);
 
     .drawerTop {
         border-radius: 30px 30px 0 0;
@@ -125,8 +125,8 @@
     overflow-y: auto;
     width: 100%;
     box-sizing: border-box;
-    scrollbar-width: thin;
-    scrollbar-color: var(--scrollbar) var(--scrollbar);
+    // scrollbar-width: thin;
+    // scrollbar-color: var(--scrollbar) var(--scrollbar);
     max-height: calc(100vh - 200px);
 
 
@@ -220,10 +220,11 @@
     .imagesContainer {
         display: flex;
         flex-direction: column;
-        gap: 20px;
+        gap: 50px;
         margin: 20px auto;
         width: 100%;
 
+       
         .gifImage {
             animation: fadeIn 0.5s ease-in-out;
             width: 100%;
@@ -235,6 +236,10 @@
             align-items: center;
             width: clamp(240px, 75%, 600px);
             box-sizing: border-box;
+
+            &.wide {
+                width: 100%;
+            }
         }
 
     }
